--- a/app/globals.css
+++ b/app/globals.css
@@ -73,4 +73,10 @@
     body {
       @apply bg-background text-foreground;
     }
+    ul {
+      @apply list-disc ml-4;
+    }
+    ol {
+      @apply list-decimal ml-4;
+    }
   }
